--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "expressjs": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "validator": "^13.1.1"
   }
