--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expressjs": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
+    "multer": "^1.4.2",
     "validator": "^13.1.1"
   }
 }
