--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-unless": "^0.5.0",
     "expressjs": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
     "validator": "^13.1.1"
   }
