--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "d3": "^6.2.0",
     "express": "^4.17.1",
     "express-unless": "^0.5.0",
     "expressjs": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.20",
+    "mongoose": "^5.10.7",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
-    "validator": "^13.1.1"
+    "pdf-parse": "^1.1.1",
+    "pdf-to-text": "0.0.7",
+    "pdfreader": "^1.2.6",
+    "resume-parser": "1.1.0",
+    "validator": "^13.1.17"
   }
 }
