--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "pdf-parse": "^1.1.1",
     "pdf-to-text": "0.0.7",
     "pdfreader": "^1.2.6",
-    "resume-parser": "1.1.0",
+    "resume-parser": "^1.1.0",
     "validator": "^13.1.17"
   }
 }
