--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "d3": "^6.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-unless": "^0.5.0",
     "expressjs": "^1.0.1",
