--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "mongoose": "^5.10.7",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.5",
     "pdf-parse": "^1.1.1",
     "pdf-to-text": "0.0.7",
     "pdfreader": "^1.2.6",
     "resume-parser": "^1.1.0",
+    "swagger-jsdoc": "^4.3.0",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^13.1.17"
   }
 }
