--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expressjs": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
+    "mongoose-auto-increment": "^5.0.1",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.5",
