--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "connect.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "kal05627356@gmail.com (www.bruhtech.com)",
