--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "cvcompiler",
   "version": "1.0.0",
-  "description": "",
   "main": "connect.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -33,5 +32,14 @@
     "swagger-jsdoc": "^4.3.0",
     "swagger-ui-express": "^4.1.4",
     "validator": "^13.1.17"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git@git.gebeya.com:bereketeabw/cv-compiler-back.git"
+  },
+  "description": ""
 }
