--- a/deployment/deploy.yaml
+++ b/deployment/deploy.yaml
@@ -39,6 +39,7 @@ spec:
           httpGet:
             path: /
             port: 3000
+          initialDelaySeconds: 20
         ports:
         - name: cv-api-st-port
           containerPort: 3000
