--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "d3": "^6.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.1.3",
     "express-unless": "^0.5.0",
     "express-validator": "^6.6.1",
     "expressjs": "^1.0.1",
+    "helmet": "^4.1.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
     "mongoose-auto-increment": "^5.0.1",
@@ -31,7 +35,8 @@
     "resume-parser": "^1.1.0",
     "swagger-jsdoc": "^4.3.0",
     "swagger-ui-express": "^4.1.4",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "xss-clean": "^0.1.1"
   },
   "directories": {
     "lib": "lib"
