--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expressjs": "^1.0.1",
     "helmet": "^4.1.1",
     "hpp": "^0.2.3",
+    "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
     "mongoose-auto-increment": "^5.0.1",
