--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.5",
     "pdf-parse": "^1.1.1",
     "pdf-to-text": "0.0.7",
