verification added on login

--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1"
+  },
   "repository": {
     "type": "git",
     "url": "git@git.gebeya.com:bereketeabw/cv-compiler-back.git"
