reset password added

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ port=3000
 EMAIL=kalkidant05@gmail.com
 PASS=t05kalkidan
 EMAIL_KEY=cvcompileremail
+URL_FRONT=http://localhost:4200
+FORGOT_PASSWORD_KEY=whyuforgotit
